@@ -35,7 +35,6 @@ TCEFORM {
 	}
 
 	tx_hisodat_mm_lit {
-		uid_local.PAGE_TSCONFIG_IDLIST < tx_hisodat.SOURCES_PIDLIST
 		uid_foreign.PAGE_TSCONFIG_IDLIST < tx_hisodat.LITERATURE_PIDLIST
 		uid_foreign.config.wizards.add.params.pid < tx_hisodat.LITERATURE_PIDLIST
 	}
